FPVTL-68 pathfinder